--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-navigation-header-buttons": "^6.1.0",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-switch": "^1.0.1",
+    "react-navigation-tabs": "^2.11.1",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "redux-thunk": "^2.4.0"
